--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <tr>
         <td style="text-align: center;"><a
             href="https://www.nike.com/membership?cp=nans_em_camp_nike_XCAT_20220623_c45180_06302022-na-swim-menssummer-m_AEP-NA-US-Email-c45180-MensSummerTimeSwim-M_CNT~USA_en_M_NCP-1fcea090-1624-49d6-995b-88555ce6e487_z_d3f6cc3b-33a2-46df-afa5-adb9ae305ac7_email"
-            style="text-decoration: none;"><img src="c:users\nches\desktop\html- personal site\nike email\img\free-shipping.jpg" style="width: 375px;" alt="free shipping"></a></td>
+            style="text-decoration: none;"><img src="c:\users\nches\desktop\html- personal site\nike email\img\free-shipping.jpg" style="width: 375px;" alt="free shipping"></a></td>
       </tr>
 
       <tr>
