--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
       <tr>
         <td style="text-align: center; padding-top: 25px;"><a
             href="https://www.nike.com/w/mens-surf-swimwear-nik1zq3un?cp=nans_em_camp_nike_XCAT_20220623_c45180_06302022-na-swim-menssummer-m_AEP-NA-US-Email-c45180-MensSummerTimeSwim-M_CNT~USA_en_M_NCP-1fcea090-1624-49d6-995b-88555ce6e487_z_d3f6cc3b-33a2-46df-afa5-adb9ae305ac7_email"
-            style="text-decoration: none;"><img src="C:\Users\nches\Desktop\HTML- Personal Site\Nike Email\img\nike-logo.jpg" style="width: 75px;" alt="nike logo"></a></td>
+            style="text-decoration: none;"><img src="images\nike-logo.jpg" style="width: 75px;" alt="nike logo"></a></td>
       </tr>
 
       <tr>
         <td style="text-align: center; padding-top: 25px;"><a
             href="https://www.nike.com/w/mens-surf-swimwear-nik1zq3un?cp=nans_em_camp_nike_XCAT_20220623_c45180_06302022-na-swim-menssummer-m_AEP-NA-US-Email-c45180-MensSummerTimeSwim-M_CNT~USA_en_M_NCP-1fcea090-1624-49d6-995b-88555ce6e487_z_d3f6cc3b-33a2-46df-afa5-adb9ae305ac7_emailhttps://www.nike.com/w/mens-surf-swimwear-nik1zq3un?cp=nans_em_camp_nike_XCAT_20220623_c45180_06302022-na-swim-menssummer-m_AEP-NA-US-Email-c45180-MensSummerTimeSwim-M_CNT~USA_en_M_NCP-1fcea090-1624-49d6-995b-88555ce6e487_z_d3f6cc3b-33a2-46df-afa5-adb9ae305ac7_email"
-            style="text-decoration: none;"><img src="C:\Users\nches\Desktop\HTML- Personal Site\Nike Email\img\nike-trunks2.jpg" style=" width: 375px;" alt=""></a></td>
+            style="text-decoration: none;"><img src="images\nike-trunks2.jpg" style=" width: 375px;" alt=""></a></td>
       </tr>
 
       <tr>
@@ -103,7 +103,7 @@
       <tr style="text-align: center;">
         <td><a
             href="https://www.nike.com/w/mens-surf-swimwear-nik1zq3un?cp=nans_em_camp_nike_XCAT_20220623_c45180_06302022-na-swim-menssummer-m_AEP-NA-US-Email-c45180-MensSummerTimeSwim-M_CNT~USA_en_M_NCP-1fcea090-1624-49d6-995b-88555ce6e487_z_d3f6cc3b-33a2-46df-afa5-adb9ae305ac7_email"><img
-              src="C:\Users\nches\Desktop\HTML- Personal Site\Nike Email\img\shop-now.jpg" Style="width: 85px;
+              src="images\shop-now.jpg" Style="width: 85px;
     padding-right: 220px" alt=""></a></td>
       </tr>
 
@@ -121,7 +121,7 @@
                     <td>
                       <a
                         href="https://www.nike.com/t/merge-mens-9-hybrid-short-MtJvks?cp=nans_em_camp_nike_XCAT_20220623_c45180_06302022-na-swim-menssummer-m_AEP-NA-US-Email-c45180-MensSummerTimeSwim-M_CNT~USA_en_M_NCP-1fcea090-1624-49d6-995b-88555ce6e487_z_d3f6cc3b-33a2-46df-afa5-adb9ae305ac7_email"><img
-                          src="C:\Users\nches\Desktop\HTML- Personal Site\Nike Email\img\nike-trunks4.jpg" style="padding-left: 75px; width: 175px;"></a>
+                          src="images\nike-trunks4.jpg" style="padding-left: 75px; width: 175px;"></a>
                     </td>
                   </tr>
 
@@ -143,7 +143,7 @@
                     <td>
                       <a
                         href="https://www.nike.com/t/mens-9-packable-swim-trunks-hXZwQl/NESSB521-444?cp=nans_em_camp_nike_XCAT_20220623_c45180_06302022-na-swim-menssummer-m_AEP-NA-US-Email-c45180-MensSummerTimeSwim-M_CNT~USA_en_M_NCP-1fcea090-1624-49d6-995b-88555ce6e487_z_d3f6cc3b-33a2-46df-afa5-adb9ae305ac7_email"><img
-                          src="C:\Users\nches\Desktop\HTML- Personal Site\Nike Email\img\nike-trunks5.jpg" style="padding-right: 65px;
+                          src="images\nike-trunks5.jpg" style="padding-right: 65px;
     width: 175px;
     padding-bottom: 14px;"></a>
                     </td>
@@ -178,7 +178,7 @@
                     <td>
                       <a
                         href="https://www.nike.com/t/jdi-stack-mens-icon-7-volley-short-jPgqfT/NESSC456-001?cp=nans_em_camp_nike_XCAT_20220623_c45180_06302022-na-swim-menssummer-m_AEP-NA-US-Email-c45180-MensSummerTimeSwim-M_CNT~USA_en_M_NCP-1fcea090-1624-49d6-995b-88555ce6e487_z_d3f6cc3b-33a2-46df-afa5-adb9ae305ac7_email"><img
-                          src="C:\Users\nches\Desktop\HTML- Personal Site\Nike Email\img\nike-trunks6.jpg" style="padding-left: 75px; width: 175px;"></a>
+                          src="images\nike-trunks6.jpg" style="padding-left: 75px; width: 175px;"></a>
                     </td>
                   </tr>
 
@@ -197,7 +197,7 @@
                   <tr style="text-align: center;">
                     <td><a
                         href="https://www.nike.com/w/mens-surf-swimwear-nik1zq3un?cp=nans_em_camp_nike_XCAT_20220623_c45180_06302022-na-swim-menssummer-m_AEP-NA-US-Email-c45180-MensSummerTimeSwim-M_CNT~USA_en_M_NCP-1fcea090-1624-49d6-995b-88555ce6e487_z_d3f6cc3b-33a2-46df-afa5-adb9ae305ac7_email"><img
-                          src="C:\Users\nches\Desktop\HTML- Personal Site\Nike Email\img\shop-now.jpg" style="padding-top: 27px;
+                          src="images\shop-now.jpg" style="padding-top: 27px;
     width: 85px;
     padding-right: 38px;
     padding-bottom: 1px;
@@ -209,7 +209,7 @@
                     <td>
                       <a
                         href="https://www.nike.com/t/converge-mens-icon-5-volley-short-FFVgpP/NESSC454-001?cp=nans_em_camp_nike_XCAT_20220623_c45180_06302022-na-swim-menssummer-m_AEP-NA-US-Email-c45180-MensSummerTimeSwim-M_CNT~USA_en_M_NCP-1fcea090-1624-49d6-995b-88555ce6e487_z_d3f6cc3b-33a2-46df-afa5-adb9ae305ac7_email"><img
-                          src="C:\Users\nches\Desktop\HTML- Personal Site\Nike Email\img\nike-trunks7.jpg" style="width: 175px; padding-right: 65px;"></a>
+                          src="images\nike-trunks7.jpg" style="width: 175px; padding-right: 65px;"></a>
                     </td>
                   </tr>
 
@@ -234,7 +234,7 @@
             </tr>
 
             <tr>
-              <td><img src="C:\Users\nches\Desktop\HTML- Personal Site\Nike Email\img\nike-model.jpg" style="width: 375px;" alt=""></td>
+              <td><img src="images\nike-model.jpg" style="width: 375px;" alt=""></td>
             </tr>
 
             <tr style="height: 25px; background-color: white; padding-bottom: 25px;">
@@ -242,13 +242,13 @@
             </tr>
 
             <tr>
-              <td><img src="C:\Users\nches\Desktop\HTML- Personal Site\Nike Email\img\nike-model2.jpg" style="width: 375px;" alt=""></td>
+              <td><img src="images\nike-model2.jpg" style="width: 375px;" alt=""></td>
             </tr>
 
             <tr style="text-align: center;">
               <td><a
                   href="https://www.nike.com/w/mens-surf-swimwear-nik1zq3un?cp=nans_em_camp_nike_XCAT_20220623_c45180_06302022-na-swim-menssummer-m_AEP-NA-US-Email-c45180-MensSummerTimeSwim-M_CNT~USA_en_M_NCP-1fcea090-1624-49d6-995b-88555ce6e487_z_d3f6cc3b-33a2-46df-afa5-adb9ae305ac7_email"><img
-                    src="C:\Users\nches\Desktop\HTML- Personal Site\Nike Email\img\shop-now.jpg" style="padding-top: 27px;
+                    src="images\shop-now.jpg" style="padding-top: 27px;
 width: 85px;
 padding-right: 290px;
 padding-bottom: 1px;
