--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                   <tr style="text-align: center;">
                     <td><a
                         href="https://www.nike.com/w/mens-surf-swimwear-nik1zq3un?cp=nans_em_camp_nike_XCAT_20220623_c45180_06302022-na-swim-menssummer-m_AEP-NA-US-Email-c45180-MensSummerTimeSwim-M_CNT~USA_en_M_NCP-1fcea090-1624-49d6-995b-88555ce6e487_z_d3f6cc3b-33a2-46df-afa5-adb9ae305ac7_email"><img
-                          src="images\shop-now.jpg" style="padding-top: 27px;
+                          src="images\shop-now.jpg" style="padding-top: 27px;"></a>
     width: 85px;
     padding-right: 38px;
     padding-bottom: 1px;
@@ -234,7 +234,7 @@
             </tr>
 
             <tr>
-              <td><img src="images\nike-model.jpg" style="width: 375px;" alt=""></td>
+              <td><a href="https://www.nike.com/w/mens-surf-swimwear-nik1zq3un?cp=nans_em_camp_nike_XCAT_20220623_c45180_06302022-na-swim-menssummer-m_AEP-NA-US-Email-c45180-MensSummerTimeSwim-M_CNT~USA_en_M_NCP-1fcea090-1624-49d6-995b-88555ce6e487_z_d3f6cc3b-33a2-46df-afa5-adb9ae305ac7_emailhttps://www.nike.com/w/mens-surf-swimwear-nik1zq3un?cp=nans_em_camp_nike_XCAT_20220623_c45180_06302022-na-swim-menssummer-m_AEP-NA-US-Email-c45180-MensSummerTimeSwim-M_CNT~USA_en_M_NCP-1fcea090-1624-49d6-995b-88555ce6e487_z_d3f6cc3b-33a2-46df-afa5-adb9ae305ac7_email"><img src="images\nike-model.jpg" style="width: 375px;" alt=""></a></td>
             </tr>
 
             <tr style="height: 25px; background-color: white; padding-bottom: 25px;">
@@ -248,7 +248,7 @@
             <tr style="text-align: center;">
               <td><a
                   href="https://www.nike.com/w/mens-surf-swimwear-nik1zq3un?cp=nans_em_camp_nike_XCAT_20220623_c45180_06302022-na-swim-menssummer-m_AEP-NA-US-Email-c45180-MensSummerTimeSwim-M_CNT~USA_en_M_NCP-1fcea090-1624-49d6-995b-88555ce6e487_z_d3f6cc3b-33a2-46df-afa5-adb9ae305ac7_email"><img
-                    src="images\shop-now.jpg" style="padding-top: 27px;
+                    src="images\shop-now.jpg" style="padding-top: 27px;"></a>
 width: 85px;
 padding-right: 290px;
 padding-bottom: 1px;
